# attn-inference-optimization

./: .gitignore  README.md
docs/: 01-strategic-overview.md  02-phase1-deep-dive.md  03-phase2-operators-preview.md  04-roadmap-phase3-6.md  05-phase1-dataflow.md  06-phase2-intuitive-guide.md  07-phase3-graph-engine-deep-dive.md  08-phase3-code-walkthrough.md  09-phase4-cpu-inference-acceleration.md  phase3_phase4_teaching_guide.docx  weekly-report-phase1-week2.md  weekly-report-phase1.md  weekly-report-phase2-week2.md  weekly-report-phase2-week3.md  weekly-report-phase3-week3.md  weekly-report-phase4-week4.md
phase1_gemm/: CMakeLists.txt
phase1_gemm/profiling/: bench_gemm.cpp
phase1_gemm/src/: gemm_naive.cpp  gemm_naive.h  gemm_parallel.cpp  gemm_parallel.h  gemm_simd.cpp  gemm_simd.h  gemm_simd_unroll.cpp  gemm_simd_unroll.h  gemm_tiled.cpp  gemm_tiled.h  timer.h
phase1_gemm/tests/: test_gemm.cpp
phase2_operators/: CMakeLists.txt
phase2_operators/include/: operators.h
phase2_operators/profiling/: bench_operators.cpp
phase2_operators/src/: operators.cpp
phase2_operators/tests/: gen_phase2_ref.py  test_operators.cpp  test_operators_numpy_ref.cpp
phase2_operators/tests/data/: attn_meta.txt
phase3_graph/: CMakeLists.txt
phase3_graph/configs/: attention_block.json
phase3_graph/include/: executor.h  graph.h  json_parser.h  memory_pool.h
phase3_graph/src/: executor.cpp  graph.cpp  json_parser.cpp  memory_pool.cpp
phase3_graph/tests/: test_executor.cpp  test_graph.cpp  test_memory_pool.cpp
phase4_gpu/: CMakeLists.txt
phase4_gpu/include/: backend.h  parallel_graph_executor.h  quantization.h
phase4_gpu/profiling/: bench_phase4_cpu.cpp
phase4_gpu/src/: cpu_parallel_backend.cpp  parallel_graph_executor.cpp  quantization.cpp
phase4_gpu/tests/: test_phase4_cpu.cpp
scripts/: bench_all.ps1  bench_all.sh  bench_numpy.py  gen_reference.py  generate_phase34_teaching_docx.py
